--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,16 @@
 
 # Core ML and Data Packages
-scikit-learn==1.4.2
-pandas==2.2.2
-numpy==1.26.4
+scikit-learn==1.3.0
+pandas==2.0.3
+numpy==1.23.5
 joblib==1.4.2
-xgboost>=1.6,<2.0
-imbalanced-learn>=0.10,<0.15
+xgboost==2.1.4
+imbalanced-learn==0.12.4
 
 # Visualization
-matplotlib==3.8.4
-wordcloud==1.9.3
+matplotlib==3.7.2
 seaborn==0.12.2
 
 # Web App Framework
-streamlit==1.34.0
+streamlit==1.38.0
 
